--- a/styles/Tickets.module.css
+++ b/styles/Tickets.module.css
@@ -56,6 +56,7 @@
     margin: 0.5rem;
     margin-bottom: 15px;
     background-color: #A7E6FF;
+    transition: background-color 0.2s ease-in-out;
     z-index: 1;
     padding: 0.5rem;
     border-radius: 0.5rem;
@@ -63,17 +64,25 @@
     box-shadow: #333;
 }
 
-.ticket-hovered {
+.ticket:hover{
     background-color: #fff;
     z-index: 2;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     border-radius: 0.5rem;
-    opacity: 0;
+    opacity: 0.5;
     transition: opacity 0.2s ease-in-out;
+    border-color: #000;
+    border-width: 2px;
+}
+
+.ticket.selected {
+    margin: 0.5rem;
+    margin-bottom: 15px;
+    background-color: #fff;
+    z-index: 1;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    color: #000;
+    box-shadow: #333;
 }
 
 .ticket-title {
